Refactor Query Options to configure 'prefetch' based on Graql query type